--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "laravel-echo": "^1.5.4",
-        "socket.io-client": "^2.2.0"
+        "socket.io-client": "^2.2.0",
+        "vue-router": "^3.0.7",
+        "vuex": "^3.1.1"
     }
 }
