--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "qiniu/php-sdk": "^7.2"
+        "maatwebsite/excel": "^3.1",
+        "qiniu/php-sdk": "^7.2",
+        "swooletw/laravel-swoole": "^2.5",
+        "textalk/websocket": "^1.2",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -59,5 +63,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
     }
 }
