--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.18",
+        "babel-plugin-component": "^1.1.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -24,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "element-ui": "^2.11.1",
         "laravel-echo": "^1.5.4",
         "socket.io-client": "^2.2.0",
         "vue-router": "^3.0.7",
