--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/horizon": "^3.4",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "qiniu/php-sdk": "^7.2",
+        "rap2hpoutre/laravel-log-viewer": "^1.3",
         "swooletw/laravel-swoole": "^2.5",
         "textalk/websocket": "^1.2",
         "toplan/laravel-sms": "~2.6",
@@ -22,6 +24,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
+        "beyondcode/laravel-query-detector": "^1.1",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
