--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "encore/laravel-admin": "^1.7",
         "fideloper/proxy": "^4.0",
         "jadekun/sku": "^1.0",
+        "laravel-admin-ext/media-manager": "^1.1",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.4",
         "laravel/tinker": "^1.0",
