--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/horizon": "^3.4",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^1.1",
         "qiniu/php-sdk": "^7.2",
         "rap2hpoutre/laravel-log-viewer": "^1.3",
         "small-rural-dog/store": "^1.0",
